syntax = "proto3";

import "common.proto";
import "group.proto";

package com.amemachif.abot.proto;

service GroupManageService {
  rpc mute (MuteRequest) returns (CommonEmptyResponse) {}
  rpc unmute (UnmuteRequest) returns (CommonEmptyResponse) {}
  rpc kick (KickRequest) returns (CommonEmptyResponse) {}
  rpc quit (QuitRequest) returns (CommonEmptyResponse) {}
  rpc muteAll (MuteUnmuteAllRequest) returns (CommonEmptyResponse) {}
  rpc unmuteAll (MuteUnmuteAllRequest) returns (CommonEmptyResponse) {}
  rpc getGroupConfig (GetGroupConfigRequest) returns (GetGroupConfigResponse) {}
  rpc setGroupConfig (SetGroupConfigRequest) returns (CommonEmptyResponse) {}
  rpc getMemberInfo (GetMemberInfoRequest) returns (GetMemberInfoResponse) {}
  rpc setMemberInfo (SetMemberInfoRequest) returns (CommonEmptyResponse) {}
}

message MuteRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  int64 memberId = 3;
  google.protobuf.Timestamp time = 4;
}

message UnmuteRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  int64 memberId = 3;
}

message KickRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  int64 memberId = 3;
  string msg = 4;
}

message QuitRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
}

message MuteUnmuteAllRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
}

message GetGroupConfigRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
}

message GetGroupConfigResponse {
  ErrorMessage code = 1;
  GroupConfig data = 2;
}

message SetGroupConfigRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  GroupConfig data = 3;
}

message GetMemberInfoRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  int64 memberId = 3;
}

message GetMemberInfoResponse {
  ErrorMessage code = 1;
  GroupMemberInfo data = 2;
}

message SetMemberInfoRequest {
  SessionKey sessionKey = 1;
  int64 target = 2;
  int64 memberId = 3;
  GroupMemberInfo data = 4;
}
